--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,8 @@ library(knitr)
 # FFire R package
 
 <!-- badges: start -->
+[![codecov](https://codecov.io/gh/DSCI-310/dsci-310-group-10-GCC-pkg/branch/main/graph/badge.svg?token=gvCJoMd9mW)](https://codecov.io/gh/DSCI-310/dsci-310-group-10-GCC-pkg)
+[![R-CMD-check](https://github.com/DSCI-310/dsci-310-group-10-GCC-pkg/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/DSCI-310/dsci-310-group-10-GCC-pkg/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 ## Installation
@@ -25,11 +27,15 @@ library(knitr)
 For the installation of this package you need to have R and RStudio installed. We recommend R 4.1.3.
 Inside of RStudio you first need to install devtools. You can do this by opening the consol and running
 
-`install.packages(“devtools”)`
+`install.packages("devtools")`
 
-Afterwards you need to run
+Afterwards load the library with
 
-`devtools::install_github(“DSCI-310/dsci-310-group-10-GCC-pkg”)`
+`library(devtools)`
+
+and run
+
+`devtools::install_github("DSCI-310/dsci-310-group-10-GCC-pkg")`
 
 to install the package.
 
