Modified roxygen documentation to make pkgdown documentation look prettier

--- a/vignettes/FFire-vignette.Rmd
+++ b/vignettes/FFire-vignette.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "FFire-vignette"
+title: "General package manual"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{FFire-vignette}
